fix(color): align clr/ui with clr/core colors
- Closes #4546

--- a/packages/angular/projects/clr-angular/src/emphasis/_properties.badges.scss
+++ b/packages/angular/projects/clr-angular/src/emphasis/_properties.badges.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2019 VMware, Inc. All Rights Reserved.
+// Copyright (c) 2016-2020 VMware, Inc. All Rights Reserved.
 // This software is released under MIT license.
 // The full license information can be found in LICENSE in the root directory of this project.
 
@@ -9,13 +9,13 @@
       --clr-badge-color: var(--clr-color-on-neutral-600);
 
       // START: deprecated for removal in 4.0
-      --clr-badge-info-bg-color: var(--clr-color-action-600);
+      --clr-badge-info-bg-color: var(--clr-color-action-800);
       --clr-badge-info-color: var(--clr-color-neutral-0);
-      --clr-badge-success-bg-color: var(--clr-color-success-700);
+      --clr-badge-success-bg-color: var(--clr-color-success-800);
       --clr-badge-success-color: var(--clr-color-neutral-0);
-      --clr-badge-warning-bg-color: var(--clr-color-warning-300);
+      --clr-badge-warning-bg-color: var(--clr-color-warning-1000);
       --clr-badge-warning-color: var(--clr-color-neutral-1000);
-      --clr-badge-danger-bg-color: var(--clr-color-danger-800);
+      --clr-badge-danger-bg-color: var(--clr-color-danger-900);
       --clr-badge-danger-color: var(--clr-color-neutral-0);
 
       --clr-badge-gray-bg-color: var(--clr-color-neutral-600);
@@ -24,10 +24,10 @@
       --clr-badge-purple-color: var(--clr-badge-font-color-light);
       --clr-badge-blue-bg-color: var(--clr-color-action-800);
       --clr-badge-blue-color: var(--clr-badge-font-color-light);
-      --clr-badge-orange-bg-color: var(--clr-color-warning-500);
-      --clr-badge-orange-color: var(--clr-badge-font-color-dark);
-      --clr-badge-light-blue-bg-color: var(--clr-color-action-300);
-      --clr-badge-light-blue-color: var(--clr-badge-font-color-dark);
+      --clr-badge-orange-bg-color: var(--clr-color-warning-1000);
+      --clr-badge-orange-color: var(--clr-color-neutral-0);
+      --clr-badge-light-blue-bg-color: var(--clr-color-action-500);
+      --clr-badge-light-blue-color: var(--clr-color-neutral-0);
       // END: deprecated for removal in 4.0
     }
   }
